<resources>
    <string name="app_name">Recepttarolo</string>
    <string name="shopping_list">Shopping List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_recipe">New recipe</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="category_items">
        <item>Soup</item>
        <item>Main course</item>
        <item>Dessert</item>
    </string-array>

    <string-array name="filters">
        <item>Everything</item>
        <item>Soup</item>
        <item>Main course</item>
        <item>Dessert</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="new__item">New item</string>
    <string name="to_the_shopping_list">To the shopping list</string>
    <string name="add_new_ingredient">Add new ingredient</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="add_new_item">Add new item</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_button">Delete button</string>
    <string name="edit_button">Edit button</string>
    <string name="edit_recipe">Edit recipe</string>
</resources>