<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe.pager.RecipeFragment">

    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/RecipeEditButton"
        app:layout_constraintEnd_toStartOf="@+id/RecipeEditButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Clear" />

    <ImageButton
        android:id="@+id/RecipeEditButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/edit_button"
        android:scaleType="fitXY"
        android:src="@drawable/ic_pencil_grey600_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/IngredientRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/toTheShoppingList"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionTextView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/ingredient_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newIngredientFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_new_ingredient"
        android:src="@drawable/ic_add_white_36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/toTheShoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_the_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



        <TextView
            android:id="@+id/DescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lines="10"
            android:text="TextView"
            android:scrollbars = "vertical"
            app:layout_constraintTop_toBottomOf="@+id/RecipeEditButton" />


</androidx.constraintlayout.widget.ConstraintLayout>